fix post endpoint and modularize exception handling

--- a/calendiary-backend/src/main/resources/application.yml
+++ b/calendiary-backend/src/main/resources/application.yml
@@ -33,4 +33,4 @@ jwt:
 
 auth:
   service:
-      base-url: http://your-colleagues-auth-backend:8080 # Get this from your colleague
+      base-url: localhost:8001 # auth backend port
