--- a/calendiary-backend/src/main/resources/application.yml
+++ b/calendiary-backend/src/main/resources/application.yml
@@ -36,6 +36,6 @@ auth:
       base-url: localhost:8001 # auth backend port
 
 cors:
-  allowed-origin:
+  allowed-origins:
     - http://localhost:8080
     - http://localhost:3000
