feature: add delete method

--- a/calendiary-backend/src/main/resources/application.properties
+++ b/calendiary-backend/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=calendiary-backend
+
+#this only works in this config file:
 cors.allowed-origins=http://localhost:3000,http://localhost:8080
