--- a/calendiary-backend/pom.xml
+++ b/calendiary-backend/pom.xml
@@ -91,6 +91,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
